; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nvdimm/extr_nvdimm_acpi.c_get_dimm_acpi_handle.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nvdimm/extr_nvdimm_acpi.c_get_dimm_acpi_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_TYPE_DEVICE = common dso_local global i32 0, align 4
@find_dimm = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i64)* @get_dimm_acpi_handle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_dimm_acpi_handle(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32* null, i32** %5, align 8
  %7 = load i32, i32* @ACPI_TYPE_DEVICE, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @find_dimm, align 4
  %10 = load i64, i64* %4, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = call i32 @AcpiWalkNamespace(i32 %7, i32* %8, i32 1, i32 %9, i32* null, i8* %11, i32** %5)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i64 @ACPI_FAILURE(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32* null, i32** %5, align 8
  br label %17

17:                                               ; preds = %16, %2
  %18 = load i32*, i32** %5, align 8
  ret i32* %18
}

declare dso_local i32 @AcpiWalkNamespace(i32, i32*, i32, i32, i32*, i8*, i32**) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
